15.mar (la)
      - add playback for MIDI in even if not in note entry mode. 
        Instrument is first selected staff or first staff
14.mar (ws)
      - fix #4969: Create empty part with title crash
      (db)
      - add Concert Band and Chamber Orchestra templates
      - remove violina5demo template
13.mar (ws)
      - fix #3861-2: Compatibility of tremolos from 0.9.5
      - fix #4957: Repeat bar lines spanning more than one staff have extra line
      - fix #4881-2: Special Barlines not included in parts
       (la)
      - add onClose hook for plugin framework 
12.mar (lvi)
      - MusicXML import/export of string and pluck
       (ws)
      - fix #3861: compatibility of tremolos from 0.9.5
       (la)
      - dashed bar does not break multi measure rests anymore
      - fix #3347 remove time sig changes actual duration
      - make abc import plugin platform independent
11.mar (ws)
      - fix #4857: dropping a clef onto a former drum staff hangs MuseScore
      (db)
      - MusicXML export of quarter tones for arrowed accidentals as specified:
        http://musescore.org/node/3807#comment-13071
      - Fix naming of plugins
      (la)
      - fix #4935 Time signature after incomplete measure
      - fix to load chord style in a cross platform way
      - fix #3750 mid measure tempo not read correctly
8.mar (lv)
      - fix MusicXML import of beams
      - fix MusicXML regression test for beams
7.mar (lv)
      - fix #4324: MusicXML export of beam is incomplete
      (ws)
      - fix #4898: Up to empty lyric syllable crash
      - fix #4900: Transpose from C major to Cb major
      - fix #4899: Transpose by interval not working
      - fix #4881-2nd: Special Barlines not included in parts
      - fix #4798: note stems move to wrong position when adjusting beam height
      (db)
      - use Up and Down arrows to move through verses (like other scorewriters)
6.mar (ws)
      - fix #4866: Lasso select chordname, copy, crash